package org.example.data.model;

public enum CategoryType {
    EXPENSE,
    INCOME
}
